// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LinePrinter renders correctly with no segments 1`] = `
<DocumentFragment>
  <div
    class="sc-eDLKkx cfncZL"
    id="line0"
  >
    <span />
  </div>
</DocumentFragment>
`;

exports[`LinePrinter renders correctly with one segment where there are no more lines 1`] = `
<DocumentFragment>
  <div
    class="sc-eDLKkx cfncZL"
    id="line0"
  >
    <span />
    <span
      class="sc-guDLey wuijx"
      id="line0-segment0"
    >
      <span
        class="sc-hLQSwg gcsUJF"
      />
      <div
        class="sc-beySPh brsoYh"
        id="line0-segment0-cursor"
      >
         
      </div>
    </span>
  </div>
</DocumentFragment>
`;

exports[`LinePrinter renders correctly with two segment where there are additional lines to follow 1`] = `
<DocumentFragment>
  <div
    class="sc-eDLKkx cfncZL"
    id="line0"
  >
    <span />
    <span
      class="sc-guDLey wuijx"
      id="line0-segment0"
    >
      <span
        class="sc-hLQSwg gcsUJF"
      />
      <div
        class="sc-beySPh brsoYh"
        id="line0-segment0-cursor"
      >
         
      </div>
    </span>
  </div>
</DocumentFragment>
`;

exports[`LinePrinter renders correctly with two segments but there are no more lines 1`] = `
<DocumentFragment>
  <div
    class="sc-eDLKkx cfncZL"
    id="line0"
  >
    <span />
    <span
      class="sc-guDLey wuijx"
      id="line0-segment0"
    >
      <span
        class="sc-hLQSwg gcsUJF"
      />
      <div
        class="sc-beySPh brsoYh"
        id="line0-segment0-cursor"
      >
         
      </div>
    </span>
  </div>
</DocumentFragment>
`;
